RESOLVED FIXED188682
Pass webPageID and webFrameID to NetworkLoad for speculative loads
https://bugs.webkit.org/show_bug.cgi?id=188682
Summary Pass webPageID and webFrameID to NetworkLoad for speculative loads
Alex Christensen
Reported 2018-08-16 16:44:02 PDT
Pass webPageID and webFrameID to NetworkLoad for speculative loads
Attachments
Patch (4.34 KB, patch)
2018-08-16 16:45 PDT, Alex Christensen
youennf: review+
Alex Christensen
Comment 1 2018-08-16 16:45:26 PDT
Alex Christensen
Comment 2 2018-08-17 11:11:36 PDT
Radar WebKit Bug Importer
Comment 3 2018-08-17 11:13:26 PDT
Ryan Haddad
Comment 4 2018-08-17 17:11:54 PDT
Reverted r234991 for reason: Caused an assertion failure on the bots. Committed r235001: <https://trac.webkit.org/changeset/235001>
Alex Christensen
Comment 5 2018-08-17 17:14:53 PDT
imported/w3c/web-platform-tests/service-workers/service-worker/windowclient-navigate.https.html would sometimes fail the MESSAGE_CHECK(frame) in WebPageProxy::didReceiveAuthenticationChallengeProxy because sometimes the frame wouldn't exist in the UI process yet. We really need to get rid of API::LoaderClient because we shouldn't even need the frame to exist.
Alex Christensen
Comment 6 2018-08-27 14:11:12 PDT
r235398 removed that message check. This is now valid. Will reland.
Alex Christensen
Comment 7 2018-08-27 14:11:59 PDT
Note You need to log in before you can comment on or make changes to this bug.