Pass webPageID and webFrameID to NetworkLoad for speculative loads https://bugs.webkit.org/show_bug.cgi?id=188682

Reviewed by Youenn Fablet.

This also removes an authentication shortcut I introduced in r234941

* NetworkProcess/cache/NetworkCacheSpeculativeLoad.cpp:
(WebKit::NetworkCache::SpeculativeLoad::SpeculativeLoad):
(WebKit::NetworkCache::SpeculativeLoad::didReceiveResponse):
* Shared/Authentication/AuthenticationManager.cpp:
(WebKit::AuthenticationManager::didReceiveAuthenticationChallenge):



Canonical link: https://commits.webkit.org/204054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235400 268f45cc-cd09-0410-ab3c-d52691b4dbfc